Adapted styles to “custom” radio button removal and fixed sizing bugs

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -43,6 +43,7 @@
     --app-button-radius: .5rem;
     --app-button-spacing-block: .6rem;
     --app-button-spacing-inline: 1.7rem;
+    --app-button-extra-spacing-inline: 1.7rem;
     --app-button-border-size: .2rem;
     --app-button-block-size: 4.8rem;
 }
